...
                        }
                        model.repo.updateSplit(BudgetSplit(b[0], b[1], b[2]))
                    }
                },
                shape = MaterialTheme.shapes.small,
            ) {
                Text("Save")
            }
        },
        dismissButton = {
            TextButton(
                enabled = !busy,
                onClick = LocalEditDismiss.current,
...
